<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startFragment">
    <fragment
        android:id="@+id/startFragment"
        android:name="com.example.cupcake.StartFragment"
        android:label="@string/multiplication"
        tools:layout="@layout/fragment_start">
        <action
            android:id="@+id/action_startFragment_to_numberListFragment"
            app:destination="@id/numberListFragment" />
    </fragment>
    <fragment
        android:id="@+id/numberListFragment"
        android:name="com.example.cupcake.NumberListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_number_list">
        <action
            android:id="@+id/action_numberListFragment_to_multiplicationFragment"
            app:destination="@id/multiplicationFragment" />
    </fragment>
    <fragment
        android:id="@+id/multiplicationFragment"
        android:name="com.example.cupcake.MultiplicationFragment"
        android:label="@string/practice"
        tools:layout="@layout/fragment_multiplication">
        <action
            android:id="@+id/action_multiplicationFragment_to_nameFragment"
            app:destination="@id/nameFragment" />
    </fragment>
    <fragment
        android:id="@+id/nameFragment"
        android:name="com.example.cupcake.NameFragment"
        android:label="@string/enter_your_name"
        tools:layout="@layout/fragment_name">
        <action
            android:id="@+id/action_nameFragment_to_resultsFragment"
            app:destination="@id/resultsFragment" />
    </fragment>
    <fragment
        android:id="@+id/resultsFragment"
        android:name="com.example.cupcake.ResultsFragment"
        android:label="@string/results"
        tools:layout="@layout/fragment_results">
        <action
            android:id="@+id/action_resultsFragment_to_startFragment"
            app:destination="@id/startFragment" />
    </fragment>
</navigation>
