<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MultiplicationFragment">

    <data>
        <!-- Child tag of variable in data to bind data in ViewModel to layout -->
        <variable
            name="multViewModel"
            type="com.example.cupcake.multiplication.MultiplicationFunctions" />

        <!-- Add layout variable and type for view of fragment -->
        <variable
            name="multiplicationFragment"
            type="com.example.cupcake.MultiplicationFragment" />

    </data>

    <!-- Contents of math quiz -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            tools:context=".ui.game.GameFragment">

            <!-- Submit button -->
            <Button
                android:id="@+id/submit"
                android:onClick="@{() -> multiplicationFragment.onSubmitProb()}"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="148dp"
                android:text="@string/submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textField" />

            <!-- Show instructions -->
            <TextView
                android:id="@+id/textView_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructions"
                android:textSize="17sp"
                app:layout_constraintBottom_toTopOf="@+id/textField"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_prob" />

            <!-- Change text to bind current text view to live data -->
            <TextView
                android:id="@+id/textView_prob"
                android:text="@{multViewModel.problem}"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                app:layout_constraintBottom_toTopOf="@+id/textView_instructions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/word_count"
                tools:text="Scramble word" />

            <!-- Show problem count -->
            <TextView
                android:id="@+id/word_count"
                android:text="@{@string/prob_count(multViewModel.currProbCount, 12)}"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintBottom_toTopOf="@+id/textView_prob"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="3 of 10 problems" />

            <!-- Show score -->
            <TextView
                android:id="@+id/score"
                android:text="@{@string/score(multViewModel.score)}"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Score: 20" />

            <!-- Input text here -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                style="@style/Widget.Unscramble.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:hint="@string/your_answer"
                app:errorIconDrawable="@drawable/ic_error"
                app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintBottom_toTopOf="@+id/submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_instructions">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName|textNoSuggestions"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>